# evolution-of-todolist

./: .gitignore  SECRET_INJECTION_PLAN.md  constitution.md  package-lock.json  package.json  pyproject.toml
.claude/skills/backend-architect/: SKILLS.md
.claude/skills/frontend-architect/: SKILLS.md
.claude/skills/monorepo-guardian/: SKILLS.md
.claude/skills/spec-enforcer-skill/: SKILLS.md
.claude/skills/stack-enforcer/: SKILLS.md
.github/workflows/: ci-cd.yml.backup
.qwen/skills/deployment-specialist/: SKILLs.md
.qwen/skills/task-traceability-auditor/: SKILLS.md
backend/: .gitignore  CLAUDE.md  alembic.ini  auth_test.py  pyproject.toml  simple_test.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_models.py
backend/docker/: backend.Dockerfile  docker-compose.yml
backend/src/: database.py  db.py  main.py  models.py
backend/src/auth/: __init__.py  auth_handler.py  settings.py
backend/src/mcp/: __init__.py  server.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: task.py  user.py
backend/src/routes/: auth.py  tasks.py
backend/src/schemas/: __init__.py  common.py  task.py  user.py
backend/src/services/: auth_service.py  task_service.py  user_service.py
backend/src/utils/: auth.py  helpers.py
backend/tests/: conftest.py  test_api_integration.py  test_auth.py  test_main.py  test_models.py  test_performance.py  test_schemas.py  test_security.py  test_task_crud.py  test_tasks.py
backend/tests/test_routes/: test_auth.py  test_tasks.py
backend/tests/test_services/: test_task_service.py
docs/: api.md  operations.md
frontend/: .eslintrc.json  .gitignore  index.ts  package-lock.json  package.json
frontend/src/__tests__/: SignInForm.test.tsx  SignUpForm.test.tsx  TaskForm.test.tsx  TaskItem.test.tsx  TaskList.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AuthGuard.tsx  ErrorBoundary.tsx  Notification.tsx  SignInForm.tsx  SignUpForm.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/context/: AuthContext.tsx
history/adr/: 0004-full-stack-technology-stack-for-phase-2.md  0005-stateless-jwt-authentication-with-user-isolation.md  0006-model-context-protocol-tools-for-ai-agent-integration.md
history/prompts/general/: 0001-adr-review-created.general.prompt.md  0002-task-generation-created.general.prompt.md  0003-phase-1-implementation-complete.general.prompt.md
history/prompts/spec/: PHR-0001-phase-2-specs-generation.prompt.md
history/prompts/tasks/: phr_tasks_complete-polish-testing_2026-02-08_19-00-00.md  phr_tasks_frontend-auth-task-crud_2026-02-08_17-58-30.md  phr_tasks_implement-task-crud-backend_2026-02-08_17-43-22.md  phr_tasks_polish-testing-implementation_2026-02-08_18-30-45.md
specs/1-specify/domain/: conversation-entity.md  task-entity.md  user-entity.md
specs/1-specify/features/: feature-01-task-crud.md  feature-02-fullstack-todo.md
specs/1-specify/phase-1/: feature-01-task-crud.md
specs/1-specify/phase-2/: feature-01-fastapi-todo-backend.md
specs/1-specify/phase-2/checklists/: requirements.md
specs/1-specify/user-journeys/: journey-01-basic-todo.md  journey-02-ai-chat.md  journey-03-advanced-features.md
specs/2-plan/: phase-2-fullstack.md
specs/2-plan/api-specs/: rest-endpoints.md
specs/2-plan/phase-1/: phase-1-console.md
specs/2-plan/phase-2/: phase-2-fastapi-todo-backend.md
specs/3-tasks/phase-1/: T-001-setup-project.md  T-002-core-logic.md  T-003-cli-interface.md  T-004-testing.md  T-005-interactive-tui.md
specs/3-tasks/phase-2/: 01-project-setup.md  02-database-models.md  03-authentication.md  04-task-crud-backend.md  05-frontend-auth.md  06-frontend-task-crud.md  07-polish-testing.md  08-deployment-mcp.md  README.md  STRUCTURE-VERIFICATION.md  fastapi-todo-backend-tasks.md  task-breakdown.md
src/: main.py
src/cli/: interactive.py  main.py
src/core/: models.py
